sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:6: error: not found: value j
    if (plusPetit(v,getValeur(j-1))){
                              ^AlgInsertionSort:11: error: not found: value j
    setValeur(j-1,v)
              ^